Stream support, MySQL only